--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.example.flutter_R-maGo_app_env_fixed">
     <application
-        android:label="flutter_taxi_app_env_fixed"
+        android:label="flutter_R-maGo_app_env_fixed"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
