--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,13 +7,15 @@ environment:
   sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
+  http: ^0.13.6
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.1.0
   flutter_naver_map: ^1.0.2
   url_launcher: ^6.2.1
-  kakao_flutter_sdk_user: ^1.9.7+3  # ✅ null safety 지원 버전으로 변경
-  dio: ^5.4.0                   # ✅ JWT 인터셉터에 활용 예정
+  kakao_flutter_sdk_user: ^1.9.7+3  # null safety 지원 버전으로 변경
+  dio: ^5.4.0                   # JWT 인터셉터에 활용 예정
+  flutter_secure_storage: ^9.0.0  #JWT를 암호화해 안전하게 저장하는 법
 
 flutter:
   uses-material-design: true
