--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,8 +14,9 @@ dependencies:
   url_launcher: ^6.2.1
   kakao_flutter_sdk_user: ^1.9.7+3  # ✅ null safety 지원 버전으로 변경
   dio: ^5.4.0                   # ✅ JWT 인터셉터에 활용 예정
+  flutter_inappwebview: ^6.0.0
 
 flutter:
   uses-material-design: true
   assets:
-    - assets/.env
+    - .env
