--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,8 +16,9 @@ dependencies:
   kakao_flutter_sdk_user: ^1.9.7+3  # null safety 지원 버전으로 변경
   dio: ^5.4.0                   # JWT 인터셉터에 활용 예정
   flutter_secure_storage: ^9.0.0  #JWT를 암호화해 안전하게 저장하는 법
+  flutter_inappwebview: ^6.0.0
 
 flutter:
   uses-material-design: true
   assets:
-    - assets/.env
+    - .env
