카카오 로그인 성공

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "cmake.sourceDirectory": "D:/R-maGO/front/Front/linux"
+    "cmake.sourceDirectory": "D:/R-maGO/front/Front/linux",
+    "java.configuration.updateBuildConfiguration": "automatic"
 }
