--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,6 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.1.0
-  flutter_naver_map: ^1.0.2
   url_launcher: ^6.2.1
   kakao_flutter_sdk_user: ^1.9.7+3  # null safety 지원 버전으로 변경
   dio: ^5.4.0                   # JWT 인터셉터에 활용 예정
@@ -21,4 +20,5 @@ dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/.env
+    - assets/images/kakao_login_medium.png
+    - .env
