--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -65,6 +65,16 @@
 	<dict>
 	<key>NSAllowsArbitraryLoads</key>
 	<true/>
+	<key>NSExceptionDomains</key>
+	<dict>
+		<key>dapi.kakao.com</key>
+		<dict>
+		<key>NSExceptionAllowsInsecureHTTPLoads</key>
+		<true/>
+		<key>NSIncludesSubdomains</key>
+		<true/>
+		</dict>
+	</dict>
 	</dict>
 </dict>
 </plist>
