해당 기기의 좌표 받아오기

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,12 @@
     package="com.example.flutter_rmago_app_env_fixed">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    
+<!-- 기기 위치 파악을 위함 -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
 
     <application
         android:label="flutter_rmago_app_env_fixed"
