--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,13 +11,14 @@ dependencies:
   flutter:
     sdk: flutter
   geolocator: ^11.0.0 #좌표를 얻기위함.
-  webview_flutter: ^4.4.2 # 또는 최신 안정 버전 확인
+  webview_flutter: ^4.13.0 # 또는 최신 안정 버전 확인
   flutter_dotenv: ^5.1.0
   url_launcher: ^6.2.1
   kakao_flutter_sdk_user: ^1.9.7+3  # null safety 지원 버전으로 변경
   dio: ^5.4.0                   # JWT 인터셉터에 활용 예정
   flutter_secure_storage: ^9.0.0  #JWT를 암호화해 안전하게 저장하는 법
   flutter_inappwebview: ^6.0.0
+  permission_handler: ^12.0.0+1
 
 flutter:
   uses-material-design: true
