--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   url_launcher: ^6.2.1
   kakao_flutter_sdk_user: ^1.9.7+3  # null safety 지원 버전으로 변경
+  kakao_flutter_sdk_auth: ^1.9.7+3
   dio: ^5.4.0                   # JWT 인터셉터에 활용 예정
   flutter_secure_storage: ^9.0.0  #JWT를 암호화해 안전하게 저장하는 법
   flutter_inappwebview: ^6.0.0
