--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -68,6 +68,8 @@
 	<!-- ✅ 위치 권한 문구 -->
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>현재 위치를 기반으로 반경 내 정보를 표시하기 위해 사용됩니다.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>항상 위치 정보를 사용합니다.</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>현재 위치를 기반으로 반경 내 정보를 표시하기 위해 사용됩니다.</string>
 
