마커 생성 및 클릭가능

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/splashImage.png
+    - assets/images/Orange.png
     - assets/map/map.html
     - .env
   fonts:
