입력과 키패드 위치의 조정

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/splashImage.png
-    - assets/images/Orange.png
+    - assets/images/Orange-removebg-preview.png
     - assets/map/map.html
     - .env
   fonts:
